fixed footer on desktop and dates on mobile

--- a/style.css
+++ b/style.css
@@ -39,12 +39,14 @@ h2#date {
   font-weight: normal;
   font-family: monospace;
   margin: 0;
+  text-align: center;
 }
 
 img#logo {
   width: 18em;
   margin: 6em;
   margin-bottom: 1em;
+  margin-top: 0;
 }
 
 div#content {
@@ -58,7 +60,7 @@ p#cta-message {
   text-align: center;
   font-size: 1.5em;
   font-weight: bold;
-  margin: 4em 0 2em;
+  margin: 2em 0 2em;
 }
 
 form#mc-embedded-subscribe-form div.mc-field-group {
@@ -93,9 +95,9 @@ form#mc-embedded-subscribe-form div.mc-field-group input#mc-embedded-subscribe {
 }
 
 div#footer {
-  position: fixed;
   bottom: 0;
-  height: 5em;
+  margin-top: 1em;
+  margin-bottom: 1em;
   display: flex;
   width: 100%;
   justify-content: center;
@@ -112,6 +114,7 @@ div#footer a {
     width: 12em;
     margin: 2em;
     margin-bottom: 1em;
+    margin-top: 1em;
   }
 
   h1#title {
@@ -121,11 +124,12 @@ div#footer a {
 
   h2#date {
     margin-top: 0.5em;
+    max-width: 300px;
   }
 
   p#cta-message {
     font-size: 1.25em;
-    margin: 2.5em 0 2em;
+    margin: 1.5em 0 1.5em;
   }
 
   form#mc-embedded-subscribe-form div.mc-field-group input#mce-EMAIL {
